# jeprofl

./: .dir-locals.el  .gitignore  Cargo.toml  LICENSE-MIT  README.md
.vim/: coc-settings.json
jeprof/: Cargo.toml
jeprof-common/: Cargo.toml
jeprof-common/src/: lib.rs
jeprof-ebpf/: Cargo.toml
jeprof-ebpf/src/: main.rs
jeprof/src/: collector.rs  main.rs  resolver.rs
jeprof/src/snapshots/: jeprof__collector__test__tests__print_histogram_empty.snap  jeprof__collector__test__tests__print_histogram_large_allocations.snap  jeprof__collector__test__tests__print_histogram_single_allocation.snap
jeprofl/: Cargo.toml
jeprofl-common/: Cargo.toml
jeprofl-ebpf/: Cargo.toml
jeprofl-ebpf/src/: main.rs
jeprofl/src/: collector.rs  main.rs
jeprofl/src/snapshots/: jeprof__collector__test__tests__print_histogram_many_small_allocations.snap  jeprof__collector__test__tests__print_histogram_multiple_sizes.snap
xtask/src/: build.rs  build_ebpf.rs  run.rs
