[package]
name = "jeprof"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
jeprof-common = { path = "../jeprof-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1.7.2"
histogram = "0.11.0"
tokio-util = { version = "0.7.12", features = ["full"] }
futures-util = "0.3.30"
blazesym = "0.2.0-rc.1"
rustc-hash = "2.0.0"
bytesize = "1.3.0"
derive_more = { version = "1.0.0", features = ["full"] }
minus = { version = "5.6.1", features = ["dynamic_output"] }

[[bin]]
name = "jeprof"
path = "src/main.rs"
